--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<title>Emilio Ochoa</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="slider/css/style.css">
 </head>
 <body>
+	
 	
 	<div id="loading"></div>
 
@@ -36,14 +38,26 @@
 
 	<section id="top">
 		
-		<div class="container">
-			<h1 class="main-title text-center">Soy Emilio Ochoa bienvenido a mi portafolio!</h1>
-			<hr class="hr">
-			<p class="text-center">Sea bienvenido a mi portafolio virtual, aquí encontraras una pequeña muestra de mi y de mis trabajos y como siempre estaré disponible para atender cualquier solicitud.</p>
+		<div class="slider">
+			<div id="fade"></div>
+			<ul>
+				<li id="slider-text">
+					<div class="container">
+						<h1 class="main-title text-center">Soy Emilio Ochoa bienvenido a mi portafolio!</h1>
+						<hr class="hr">
+						<p class="text-center">Sea bienvenido a mi portafolio virtual, aquí encontraras una pequeña muestra de mi y de mis trabajos y como siempre estaré disponible para atender cualquier solicitud.</p>
 
-			<div class="text-center">
-				<button type="button" onclick="goTo('#information')" class="btn-primary-giant">Ver mas</button>
-			</div>
+						<div class="text-center">
+							<button type="button" onclick="goTo('#information')" class="btn-primary-giant">Ver mas</button>
+						</div>
+					</div>
+				</li>
+				<li id="slider-item1"></li>
+				<li id="slider-item2"></li>
+				<li id="slider-item3"></li>
+				<li id="slider-item4"></li>
+			</ul>
+
 		</div>
 
 	</section>
@@ -70,7 +84,7 @@
 						<li><strong>Lugar de nacimiento: </strong>Valencia</li>
 						<li><strong>Nacionalidad: </strong>Venezolano</li>
 						<li><strong>Estado civil: </strong>Soltero</li>
-						<li><strong>Edad: </strong>24 años</li>
+						<li><strong>Edad: </strong>25 años</li>
 					</ul>
 				</div>
 
@@ -251,7 +265,7 @@
 			<h2 class="secondary-title text-center">Portafolio</h2>
 			<hr class="hr">
 			
-			<div class="row">
+			<div class="row port-row">
 				
 				<!-- Porfolio item -->
 				<div class="col-xs-6 col-md-3">
@@ -324,6 +338,32 @@
 
 				<!-- Porfolio item -->
 				<div class="col-xs-6 col-md-3">
+					<a href="https://github.com/emilioaor/tu-hipico-online" target="_blank">
+						<div class="portfolio-item">
+							<h4>Tu hipico online <span class="text-warning">(Github)</span></h4>
+							<img src="img/portfolio/hipico.jpg" class="img-responsive" alt="Acortador de enlaces" title="Acortador de enlaces">
+							<p class="text-justify">
+								Sistema para el control de apuestas de carrera de caballos.
+							</p>
+						</div>
+					</a>
+				</div>
+
+				<!-- Porfolio item -->
+				<div class="col-xs-6 col-md-3 clear-991">
+					<a href="https://github.com/emilioaor/loteria-de-animalitos" target="_blank">
+						<div class="portfolio-item">
+							<h4>Lotería de animalitos <span class="text-warning">(Github)</span></h4>
+							<img src="img/portfolio/animalito.jpg" class="img-responsive" alt="Acortador de enlaces" title="Acortador de enlaces">
+							<p class="text-justify">
+								Sistema para la venta de lotería de animalitos.
+							</p>
+						</div>
+					</a>
+				</div>
+
+				<!-- Porfolio item -->
+				<div class="col-xs-6 col-md-3">
 					<a href="https://github.com/emilioaor/consultoria-legal" target="_blank">
 						<div class="portfolio-item">
 							<h4>Consultoría legal <span class="text-warning">(Github)</span></h4>
@@ -335,8 +375,12 @@
 					</a>
 				</div>
 				
+			</div>
+
+			<div class="row">
+
 				<!-- Porfolio item -->
-				<div class="col-xs-6 col-md-3 clear-991">
+				<div class="col-xs-6 col-md-3">
 					<a href="https://github.com/emilioaor/crea-tu-cine" target="_blank">
 						<div class="portfolio-item">
 							<h4>Crea tu cine online <span class="text-warning">(Github)</span></h4>
@@ -361,12 +405,8 @@
 					</a>
 				</div>
 
-			</div>
-
-			<div class="row">
-
 				<!-- Porfolio item -->
-				<div class="col-xs-6 col-md-3">
+				<div class="col-xs-6 col-md-3 clear-991">
 					<a href="https://github.com/emilioaor/laravel-lista-de-cumpleaneros" target="_blank">
 						<div class="portfolio-item">
 							<h4>Publica cumpleaños <span class="text-warning">(Github)</span></h4>
@@ -452,5 +492,6 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="slider/js/main.js"></script>
 </body>
 </html>
