--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://control-solicitudes.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -580,7 +580,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://control-inventario.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -638,7 +638,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://pec.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -710,7 +710,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://maquinaria-pesada.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -757,7 +757,7 @@
 
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://acorta-enlaces.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -824,7 +824,7 @@
 
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://hipico.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -886,7 +886,7 @@
 
 				</div>
 				<div class="modal-footer">
-					<a href="#" class="btn btn-primary">
+					<a href="http://animalitos.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -1007,7 +1007,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="" class="btn btn-primary">
+					<a href="http://crea-tu-cine.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -1053,7 +1053,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="" class="btn btn-primary">
+					<a href="http://cineencasa.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -1097,7 +1097,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<a href="" class="btn btn-primary">
+					<a href="http://cumple.emilioochoa.com.ve" target="_blank" class="btn btn-primary">
 						<i class="glyphicon glyphicon-eye-open"></i>	Ir al demo
 					</a>
 					<button type="button" class="btn btn-danger" data-dismiss="modal">
